Salesforce/main/default/objects/Analitica_DemandaVsVenta__c/Analitica_DemandaVsVenta__c.object-meta.xml
<CustomObject>
    <description>Creado por Jere para programar instantaneas analiticas de Ventas contra demanda.</description>
    <label>Analitica_DemandaVsVenta</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Nombre de Analitica_DemandaVsVenta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Analiticas_DemandaVsVenta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>