Salesforce/main/default/objects/Analitica_DemandaVsVenta__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <formula>TEXT(Producto__r.Categoria__c)</formula>
    <label>Categoria</label>
    <type>Text</type>
</CustomField>