Salesforce/main/default/objects/Analitica_DemandaVsVenta__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Analiticas_DemandaVsVenta</relationshipLabel>
    <relationshipName>Analiticas_DemandaVsVenta</relationshipName>
    <type>Lookup</type>
</CustomField>