Salesforce/main/default/objects/Analitica_DemandaVsVenta__c/fields/Regiao_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Regiao_Comercial__c</fullName>
    <label>Região Comercial</label>
    <length>80</length>
    <type>Text</type>
</CustomField>