Salesforce/main/default/objects/Analitica_DemandaVsVenta__c/fields/Tecnologia__c.field-meta.xml
<CustomField>
    <fullName>Tecnologia__c</fullName>
    <formula>Producto__r.Tecnologia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tecnología</label>
    <type>Text</type>
</CustomField>