Salesforce/main/default/objects/Analitica_DemandaVsVenta__c/fields/Total_Faturado__c.field-meta.xml
<CustomField>
    <fullName>Total_Faturado__c</fullName>
    <label>Total Faturado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>