Salesforce/main/default/objects/Analitica_DemandaVsVenta__c/fields/Variedade__c.field-meta.xml
<CustomField>
    <fullName>Variedade__c</fullName>
    <formula>Producto__r.pruebaNV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variedade</label>
    <type>Text</type>
</CustomField>